@@ -13,15 +13,21 @@ from backend.destinations import register
 logger = logging.getLogger(__name__)
 
 
-@register("csv")
+@register("csvdump")
+@register("csv")  # Also register as "csv" for backward compatibility
 class CsvDumpDestination(DestinationBase):
-    name = "csv"
+    name = "csvdump"
 
     def __init__(self) -> None:
         self.dump_dir = Path(os.getenv("CSV_DUMP_DIR", "./csv_dumps"))
         self.dump_dir.mkdir(parents=True, exist_ok=True)
 
     async def send(self, *, payload: Iterable[Dict[str, Any]], profile_config: dict[str, Any]) -> None:  # noqa: D401
+        # Use custom dump_dir from config if provided
+        csvdump_config = profile_config.get("csvdump", {})
+        dump_dir = Path(csvdump_config.get("dump_dir", self.dump_dir))
+        dump_dir.mkdir(parents=True, exist_ok=True)
+        
         for doc in payload:
             ts = datetime.utcnow().strftime("%Y%m%dT%H%M%S%f")
             import uuid, copy
@@ -35,6 +41,6 @@ class CsvDumpDestination(DestinationBase):
                 return obj
 
             safe_doc = _stringify(copy.deepcopy(doc))
-            file_path = self.dump_dir / f"{safe_doc.get('id', 'doc')}_{ts}.json"
+            file_path = dump_dir / f"{safe_doc.get('id', 'doc')}_{ts}.json"
             file_path.write_text(json.dumps(safe_doc, ensure_ascii=False, indent=2))
             logger.info("Wrote document to %s", file_path) 
